--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My First HTML Page</title>
+    <title>My second HTML Page</title>
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
