--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hi Page</title>
+    <title>hello Page</title>
 </head>
 <body>
 
     <h1>Hi!</h1>
-
+    <h1>hello</h1>
 </body>
 </html>
